<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SnapPetsSampleProject</string>
    <string name="action_settings">Settings</string>
    <string name="store_image_folder">com.wowwee.snappetssampleproject</string>
    <string name="buy_a_snappet">Buy a</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="connecting">Connecting</string>
    <string name="searching_for">Searching for</string>
    <string name="your">your</string>
    <string name="your_snappet_name">Your Snap Pet name</string>
    <string name="loading_images_from_snappet">Loading images from Snap Pet</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="close">Close</string>
    <string name="save_error">Failed with error</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="theme">Theme</string>
    <string name="photos_will_be_deleted_on_snappet_and_app">Photo(s) will be deleted on SnapPet and the SnapPets App</string>
    <string name="popup_ok">OK</string>
    <string name="timer">Timer</string>
    <string name="use_me">use SnapPets</string>
    <string name="or_me">or phone</string>
    <string name="to_snap">TO SNAP</string>
    <string name="take_a_picture_in">Take a picture in:</string>
    <string name="take_a_picture_every">Take a picture every:</string>
    <string name="menu">Menu</string>
    <string name="select">Select</string>
    <string name="name_me">Name me!</string>
    <string name="please_enter_pin_to_connect">Please enter PIN to connect</string>
    <string name="keep_it_secret">Shhh! Keep it secret</string>
    <string name="pin">PIN</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="dont_detect_snappet_closeby">We don\'t detect Snap Pet closeby. Click below to</string>
    <string name="options">Options</string>
    <string name="customization">Customization</string>
    <string name="snappet_name">Snap Pet Name</string>
    <string name="snappet_pin">Snap Pet PIN</string>
    <string name="general">General</string>
    <string name="reset">Reset</string>
    <string name="reset_snappet">Reset Snap Pet</string>
    <string name="reset_press_button_on_top_of_snappet">Please press the button on top of Snap Pet and press OK at the same time.</string>
    <string name="setup_new_name_successful">Setup new name successfully</string>
    <string name="sec3">3s</string>
    <string name="sec7">7s</string>
    <string name="sec10">10s</string>
    <string name="sec30">30s</string>
    <string name="min2">2min</string>
    <string name="min5">5min</string>
    <string name="quit_app_confirm">Please click back again to exit</string>
    <string name="saved_photo_text">The photo was saved in </string>
    <string name="doesnt_support">Apologized that mobile doesn\'t support SnapPet</string>
    <string name="deny_bt_enable">Denied the Bluetooth access</string>
    <string name="new_photo_default_name">sketchpad_</string>
    <string name="switch_mode">Switch\nmode</string>
    <string name="flash_mode_off">Flash: off</string>
    <string name="flash_mode_on">Flash: on</string>
    <string name="flash_mode_auto">Flash: auto</string>
    <string name="flash_mode_disable">No flash</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back camera</string>
</resources>
