<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_screen_fill">

    <RelativeLayout
        android:id="@+id/setupPinLayout"
        style="@style/popup_rounded_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_back"
                style="@style/popup_refresh_button"
                android:text="Back" />


            <com.qwerjk.better_text.MagicTextView
                android:id="@+id/txt_title"
                style="@style/popup_text"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/pin"
                android:textSize="60dp"
                app:typeface="swanse_bold.ttf" />

            <com.qwerjk.better_text.MagicTextView
                android:id="@+id/txt_sub_title"
                style="@style/popup_small_text_singleline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/keep_it_secret"
                app:typeface="swanse_bold.ttf" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputForm"
            style="@style/popup_inputFormLayout"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/edit_pin"
                style="@style/popup_input_form_edit_text"
                android:inputType="number"
                android:textSize="30dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_popup_next"
            style="@style/popup_ok_button"
            android:text="@string/popup_ok"/>

    </RelativeLayout>
</RelativeLayout>