<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_header_height"
            android:background="@color/grey_color"
            android:tag="auto_scale">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/back" />

            <com.qwerjk.better_text.MagicTextView
                android:id="@+id/txt_customization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/customization"
                android:textColor="@color/white_color"
                android:textSize="24dp"
                app:typeface="swanse_bold.ttf" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/snappetIcon"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                android:adjustViewBounds="true" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"
                android:text="@string/popup_ok" />

            <EditText
                android:id="@+id/pinEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/snappetIcon"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/grey_color"
                android:textSize="28dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/pinEdit"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/dark_grey_color" />

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>