<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color">

    <RelativeLayout
        android:layout_width="@dimen/use_snappet_or_phone_image_size"
        android:layout_height="@dimen/use_snappet_or_phone_image_size"
        android:layout_gravity="center">

        <com.qwerjk.better_text.MagicTextView
            android:id="@+id/textView"
            android:layout_width="@dimen/use_me_to_snap_or_me_width"
            android:layout_height="@dimen/use_me_to_snap_or_me_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/use_me_left_margin"
            android:layout_marginTop="@dimen/use_me_or_me_top_margin"
            android:gravity="center_vertical|center_horizontal"
            android:lineSpacingExtra="5dp"
            android:text="@string/use_me"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/use_me_to_snap_or_me_text_size"
            app:typeface="swanse_bold.ttf" />

        <com.qwerjk.better_text.MagicTextView
            android:layout_width="@dimen/use_me_to_snap_or_me_width"
            android:layout_height="@dimen/use_me_to_snap_or_me_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/or_me_right_margin"
            android:layout_marginTop="@dimen/use_me_or_me_top_margin"
            android:gravity="center_vertical|center_horizontal"
            android:lineSpacingExtra="5dp"
            android:text="@string/or_me"
            android:textColor="@android:color/white"
            android:textSize="@dimen/use_me_to_snap_or_me_text_size"
            app:typeface="swanse_bold.ttf" />

        <com.qwerjk.better_text.MagicTextView
            android:layout_width="@dimen/snap_me_width"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="@dimen/to_snap_right_margin"
            android:layout_marginTop="@dimen/to_snap_top_margin"
            android:gravity="center_vertical|center_horizontal"
            android:lineSpacingExtra="5dp"
            android:lines="2"
            android:singleLine="false"
            android:text="@string/to_snap"
            android:textColor="@android:color/white"
            android:textSize="@dimen/use_me_to_snap_or_me_text_size"
            app:typeface="swanse_bold.ttf" />

        <com.qwerjk.better_text.MagicTextView
            android:id="@+id/txt_countdown_snap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/countdown_padding_left"
            android:text="10"
            android:textColor="@color/white_color"
            android:textSize="@dimen/countdown_text_size"
            android:textStyle="bold"
            android:visibility="invisible"
            app:typeface="swanse_bold.ttf" />
    </RelativeLayout>
</FrameLayout>
